# comment-checker-rs

./: .comment-checker.toml  .gitignore  Cargo.toml  LICENSE  README.md  install.sh  scratch.py  scratch.rs
.github/workflows/: build-parsers.yml  release.yml
scripts/: build-parsers.sh
src/: allowlist.rs  checker.rs  cli.rs  config.rs  error.rs  grammar.rs  lib.rs  main.rs  output.rs  setup.rs
src/input/: filesystem.rs  hook.rs  mod.rs
src/parser/: comment.rs  languages.rs  mod.rs
tests/: integration_test.rs  parser_test.rs  snapshot_test.rs
tests/common/: mod.rs
tests/fixtures/: c_test.c  cpp_test.cpp  go.go  java.java  javascript.js  python.py  ruby.rb  rust.rs  shell.sh  typescript.ts
tests/snapshots/: snapshot_test__c_snapshot.snap  snapshot_test__cpp_snapshot.snap  snapshot_test__go_snapshot.snap  snapshot_test__java_snapshot.snap  snapshot_test__javascript_snapshot.snap  snapshot_test__python_snapshot.snap  snapshot_test__ruby_snapshot.snap  snapshot_test__rust_snapshot.snap  snapshot_test__shell_snapshot.snap  snapshot_test__typescript_snapshot.snap
