[package]
name = "comment-checker"
version = "0.1.0"
edition = "2024"
description = "A CLI tool that checks code comments using tree-sitter AST parsing"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
ignore = "0.4"
regex = "1"
rayon = "1"
minijinja = "2"
tree-sitter = "~0.26"
tree-sitter-language = "0.1"
libloading = "0.9"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
